first version finished

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -51,3 +51,13 @@
 video{
     cursor: pointer;
 }
+
+.incorrect .marked:after{
+    content:"✔";
+    color: red;
+}
+
+.correct .marked:after{
+    content:"✔";
+    color: green;
+}
